# djangogoboot

./: LICENSE  README.md  pyproject.toml
djangogoboot/: main.py  repo.py  settings.py  ssh.py  utils.py
